--- a/index.html
+++ b/index.html
@@ -6,47 +6,97 @@
 <link rel="stylesheet" href="./css/Estilos.css">
     </head>
   <body>
-<img width="1750" height="300" src="./Imagenes/Portada2.jpg" alt="Portada">
-<br>
+
+<header>
 <h1 style="color:#1E8449"><U> <center><Font size=+5 face = "Times new roman"> Recetas tipicas de Misiones </Font> </center></U></h1>
+<div class="Whatsapp-icono">
+<a target="_blank" href="https://api.whatsapp.com/send?phone=543764726524&text=Hola!%20 ">
+<img src="./Imagenes/Whatsapp-icono.jpg" alt="Whatsapp">
+</a>
+</div>
+</header>
+
 <br>
-<h2><i><Font face = "Arial"> Ahora hablaremos de la provincia de Misiones, es una de las 23 provincias que conforman la República de Argentina,
-   con un total de 319.469 habitantes se hace como una de las provincias más destacadas del país.</Font></i></h2>
-   <br>
-<center><img width="560" height="315" src="./imagenes/Misi.jpg" alt="Provincia de Misiones "></center>
-<center> <iframe width="560" height="315"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1822976.7971917077!2d-56.16776370028464!3d-26.82399528662349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f811245d4ce333%3A0xfb5d357febb15a1d!2sMisiones!5e0!3m2!1ses!2sar!4v1682948494897!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
-   <br>
-<h2><i><Font face ="Arial" > Los platos típicos de misiones se caracterizan generalmente por tener gran variedad de ingredientes y maneras de preparar,
-también destaca su manera artesanal de preparar sus platos propios de la región, cualquiera que desee visitar esta provincia,
-quedara encantando con la variedad de comidas típicas de la provincia de Misiones. </Font></i></h2>
-<img src="" alt="">
+<!--navegador con 4 enlaces a otras recetas-->
+<nav>
+  <div class="R">
+    <a href="https://www.recetasparaguay.com/recetas/reposteria/dulce-de-mamon"> <h2 class="R">Receta N°1</h2></a>
+    <a href="https://www.196flavors.com/es/paraguay-dulce-de-mamon/"> <h2 class="R">Receta N°2</h2> </a>
+    <a href="https://www.mundodeportivo.com/uncomo/comida/receta/como-hacer-dulce-de-mamon-30603.html"> <h2 class="R">Receta N°3</h2> </a>
+    <a href="https://camilamade.com/es/dulce-de-mamon-papaya-verde-dulce/"> <h2 class="R"> Receta N°4</h2></a>
+
+  </div>
+</nav>
+   <section>
+
 <h1><Font size = +5 ><Center><u> Receta del dulce de mamon</u></center></Font></h1>
-<h2 class="C2"><Font size= +3> <u>Ingredientes:</Font></u></h2>
-<ul><Font size=+2>
-  <li>3Kg de mamon verde</li>
+
+  <h2 class="C2"><Font size= +3> <u>Ingredientes:</Font></u></h2>
+  <ul><Font size=+2>
+    <li>3Kg de mamon verde</li>
+    <br>
+    <li>3Kg de azucar</li>
+    <br>
+    <li>Agua</li>
+    <br>
+    <li>Vainilla y clavo de olor </li>
+    <br/></Font>
+  </ul>
+  <h2 class="C2"><Font size= +3> <u>Preparación:</u></Font></h2>
+  <ol><Font size=+2>
+    <li>Primero que todo se debe pelar la fruta, y quitar la pulpa de la semilla con la ayuda de una cucharilla,
+    luego procedemos a hervir una olla con abundante agua y una vez que este hirviendo agregamos la fruta, tiene que quedar totalmente cubierta por agua,
+    igualmente debe dejarse hervir por 4 minutos una vez que esté lista, se debe botar el agua y lavar la fruta varias veces con agua fresca.<Font></li>
+    <br>
+    <li>Colocar la pulpa de la fruta en una cacerola o tacho de cobre, cubrir con el agua fría y luego llevar esta olla al fuego y agregamos el azúcar poco a poco,
+       consiguiente se deja hervir por 3 horas, luego retirar del fuego y dejarlo descansando hasta el día siguiente.</li>
+       <br>
+    <li>Finalmente colocamos al fuego el dulce que hicimos el día anterior, agrega otro poco de azúcar, el clavo de olor,
+      luego dejar hervir por 3 horas hasta que el almíbar ya esté listo y la fruta tenga un color traslucido, dejar enfriar y servir.</li>
+      <br></Font>
+  </ol>
+   </section>
+
+  <aside class="">
+    <h1>¿Donde queda Misiones?</h1>
+  <p><Font size=+2> Ahora hablaremos de la provincia de Misiones, es una de las 23 provincias que conforman la República de Argentina,con un total de 319.469 habitantes se hace como una de las provincias más destacadas del país.</Font></p>
   <br>
-  <li>3Kg de azucar</li>
-  <br>
-  <li>Agua</li>
-  <br>
-  <li>Vainilla y clavo de olor </li>
-  <br/></Font>
-</ul>
-<h2 class="C2"><Font size= +3> <u>Preparación:</u></Font></h2>
-<ol><Font size=+2>
-  <li>Primero que todo se debe pelar la fruta, y quitar la pulpa de la semilla con la ayuda de una cucharilla,
-  luego procedemos a hervir una olla con abundante agua y una vez que este hirviendo agregamos la fruta, tiene que quedar totalmente cubierta por agua,
-  igualmente debe dejarse hervir por 4 minutos una vez que esté lista, se debe botar el agua y lavar la fruta varias veces con agua fresca.<Font></li>
-  <br>
-  <li>Colocar la pulpa de la fruta en una cacerola o tacho de cobre, cubrir con el agua fría y luego llevar esta olla al fuego y agregamos el azúcar poco a poco,
-     consiguiente se deja hervir por 3 horas, luego retirar del fuego y dejarlo descansando hasta el día siguiente.</li>
-     <br>
-  <li>Finalmente colocamos al fuego el dulce que hicimos el día anterior, agrega otro poco de azúcar, el clavo de olor,
-    luego dejar hervir por 3 horas hasta que el almíbar ya esté listo y la fruta tenga un color traslucido, dejar enfriar y servir.</li>
-    <br></Font>
-</ol>
-<!-- colocar Video de la preparacion-->
-<h1 class="C3"><I><u><center>Video de la preparación:</center></u></I></h1>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/90dPJgxV2S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
+  <p><Font size=+2> Los platos típicos de misiones se caracterizan generalmente por tener gran variedad de ingredientes y maneras de preparar,
+  también destaca su manera artesanal de preparar sus platos propios de la región, cualquiera que desee visitar esta provincia,
+ quedara encantando con la variedad de comidas típicas de la provincia de Misiones. </Font></p>
+<center><img class="Prov"src="./imagenes/Misi.jpg" alt="Provincia de Misiones "></center>
+<center> <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1822976.7971917077!2d-56.16776370028464!3d-26.82399528662349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f811245d4ce333%3A0xfb5d357febb15a1d!2sMisiones!5e0!3m2!1ses!2sar!4v1682948494897!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
+</aside>
+<div class="Youtube">
+  <!-- colocar Video de la preparacion-->
+  <h1 class="C3"><I><u><center>Video de la preparación:</center></u></I></h1>
+  <center><iframe width="560" height="315" src="https://www.youtube.com/embed/90dPJgxV2S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
+
+</div>
+
+<!--colocar en el footer enlaces a las redes sociales con los iconos correspondientes-->
+<footer>
+<!--facebook-->
+<div class="facebook-icono">
+<a target="_blank" href="https://www.facebook.com/kamii.piiriz/">
+<img src="./Imagenes/facebook.jpg" alt="facebook">
+</a>
+</div>
+
+<!--Instagram-->
+<div class="instagram">
+<a target="_blank" href="https://instagram.com/camilapiriz99?igshid=ZGUzMzM3NWJiOQ==">
+<img src="./Imagenes/instagram.jpg" alt="instagram">
+</a>
+</div>
+<!--linkelind-->
+<div class="link">
+<a target="_blank" href="https://ar.linkedin.com/in/camila-luana-piriz-2b0a1b1b3 ">
+<img src="./Imagenes/link.jpg" alt="linkedin">
+</a>
+</div>
+</footer>
+
+
   </body>
 </html>
