--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>RECETAS TIPICAS DE MISIONES</title>
 <link rel="stylesheet" href="./css/Estilos.css">
     </head>
   <body>
-
 <header>
-<h1 style="color:#1E8449"><U> <center><Font size=+5 face = "Times new roman"> Recetas tipicas de Misiones </Font> </center></U></h1>
+  <div class="ban">
+      <img  src="./Imagenes/bandera.jpg"width="150" height="150" alt="bandera">
+  </div>
+  <div class="Titulo">
+    <h1 style="color:#1E8449"><U> <center><Font size=+5 face = "Times new roman"> Recetas tipicas de Misiones </Font> </center></U></h1>
+
+  </div>
+  <!--facebook-->
+  <div class="redes">
+  <a target="_blank" href="https://www.facebook.com/kamii.piiriz/">
+  <img src="./Imagenes/facebook.jpg" alt="facebook">
+  </a>
+  <!--Instagram-->
+  <a target="_blank" href="https://instagram.com/camilapiriz99?igshid=ZGUzMzM3NWJiOQ==">
+  <img src="./Imagenes/instagram.jpg" alt="instagram">
+  </a>
+  <!--linkelind-->
+  <a target="_blank" href="https://ar.linkedin.com/in/camila-luana-piriz-2b0a1b1b3 ">
+  <img src="./Imagenes/link.jpg" alt="linkedin">
+  </a>
+  </div>
+
 <div class="Whatsapp-icono">
 <a target="_blank" href="https://api.whatsapp.com/send?phone=543764726524&text=Hola!%20 ">
 <img src="./Imagenes/Whatsapp-icono.jpg" alt="Whatsapp">
@@ -64,7 +85,7 @@
   <p><Font size=+2> Los platos típicos de misiones se caracterizan generalmente por tener gran variedad de ingredientes y maneras de preparar,
   también destaca su manera artesanal de preparar sus platos propios de la región, cualquiera que desee visitar esta provincia,
  quedara encantando con la variedad de comidas típicas de la provincia de Misiones. </Font></p>
-<center><img class="Prov"src="./imagenes/Misi.jpg" alt="Provincia de Misiones "></center>
+<center><img class="Prov"src="./Imagenes/Misi.JPG" alt="Provincia de Misiones "></center>
 <center> <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1822976.7971917077!2d-56.16776370028464!3d-26.82399528662349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f811245d4ce333%3A0xfb5d357febb15a1d!2sMisiones!5e0!3m2!1ses!2sar!4v1682948494897!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
 </aside>
 <div class="Youtube">
@@ -76,6 +97,8 @@
 
 <!--colocar en el footer enlaces a las redes sociales con los iconos correspondientes-->
 <footer>
+<!--mapa-->
+  <iframe class="mapafooter" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1822976.7971917077!2d-56.16776370028464!3d-26.82399528662349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f811245d4ce333%3A0xfb5d357febb15a1d!2sMisiones!5e0!3m2!1ses!2sar!4v1682948494897!5m2!1ses!2sar" width="150" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <!--facebook-->
 <div class="facebook-icono">
 <a target="_blank" href="https://www.facebook.com/kamii.piiriz/">
@@ -94,6 +117,16 @@
 <a target="_blank" href="https://ar.linkedin.com/in/camila-luana-piriz-2b0a1b1b3 ">
 <img src="./Imagenes/link.jpg" alt="linkedin">
 </a>
+</div>
+
+<div class="informacion">
+  <ul>
+    <li>Camila Luana Piriz</li>
+    <br>
+    <li>Camila.piriz@outolook.com</li>
+    <li><a href="https://ar.linkedin.com/in/camila-luana-piriz-2b0a1b1b3"> <h3 class="L">linkedin</h3></a></li>
+
+  </ul>
 </div>
 </footer>
 
