--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <div class="ban">
       <img  src="./Imagenes/bandera.jpg"width="150" height="150" alt="bandera">
   </div>
-  <div class="Titulo">
-    <h1 style="color:#1E8449"><U> <center><Font size=+5 face = "Times new roman"> Recetas tipicas de Misiones </Font> </center></U></h1>
-
+  <div class="T">
+    <h1 style="color:#1E8449"><U> <center><Font size=+100>Recetas tipicas de Misiones </font></center></U></h1>
   </div>
   <!--facebook-->
   <div class="redes">
@@ -50,21 +49,18 @@
 </nav>
    <section>
 
-<h1><Font size = +5 ><Center><u> Receta del dulce de mamon</u></center></Font></h1>
+<h1 class="T2"><Font size = +5 ><Center><u> Receta del dulce de mamon</u></center></Font></h1>
 
   <h2 class="C2"><Font size= +3> <u>Ingredientes:</Font></u></h2>
-  <ul><Font size=+2>
+  <ul class="in"><Font size=+2>
     <li>3Kg de mamon verde</li>
-    <br>
     <li>3Kg de azucar</li>
-    <br>
     <li>Agua</li>
-    <br>
     <li>Vainilla y clavo de olor </li>
     <br/></Font>
   </ul>
   <h2 class="C2"><Font size= +3> <u>Preparación:</u></Font></h2>
-  <ol><Font size=+2>
+  <ol class="in"><Font size=+2>
     <li>Primero que todo se debe pelar la fruta, y quitar la pulpa de la semilla con la ayuda de una cucharilla,
     luego procedemos a hervir una olla con abundante agua y una vez que este hirviendo agregamos la fruta, tiene que quedar totalmente cubierta por agua,
     igualmente debe dejarse hervir por 4 minutos una vez que esté lista, se debe botar el agua y lavar la fruta varias veces con agua fresca.<Font></li>
@@ -79,10 +75,9 @@
    </section>
 
   <aside class="">
-    <h1>¿Donde queda Misiones?</h1>
-  <p><Font size=+2> Ahora hablaremos de la provincia de Misiones, es una de las 23 provincias que conforman la República de Argentina,con un total de 319.469 habitantes se hace como una de las provincias más destacadas del país.</Font></p>
-  <br>
-  <p><Font size=+2> Los platos típicos de misiones se caracterizan generalmente por tener gran variedad de ingredientes y maneras de preparar,
+    <h1 class="Ms">¿Donde queda Misiones?</h1>
+  <p class="in"><Font size=+2> Ahora hablaremos de la provincia de Misiones, es una de las 23 provincias que conforman la República de Argentina,con un total de 319.469 habitantes se hace como una de las provincias más destacadas del país.</Font></p>
+  <p class="in"><Font size=+2> Los platos típicos de misiones se caracterizan generalmente por tener gran variedad de ingredientes y maneras de preparar,
   también destaca su manera artesanal de preparar sus platos propios de la región, cualquiera que desee visitar esta provincia,
  quedara encantando con la variedad de comidas típicas de la provincia de Misiones. </Font></p>
 <center><img class="Prov"src="./Imagenes/Misi.JPG" alt="Provincia de Misiones "></center>
@@ -120,13 +115,12 @@
 </div>
 
 <div class="informacion">
-  <ul>
+  <ul><font size=+3>
     <li>Camila Luana Piriz</li>
-    <br>
     <li>Camila.piriz@outolook.com</li>
     <li><a href="https://ar.linkedin.com/in/camila-luana-piriz-2b0a1b1b3"> <h3 class="L">linkedin</h3></a></li>
 
-  </ul>
+  </font></ul>
 </div>
 </footer>
 
