--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <meta name="description" content="Receta de dulce de mamon">
+    <meta name="keywords" content="Cocina, Recetas, Dulce de mamon">
+    <meta name="author" content="Camila Luana Piriz">
     <title>RECETAS TIPICAS DE MISIONES</title>
 <link rel="stylesheet" href="./css/Estilos.css">
     </head>
   <body>
 <header>
+<div class="CELULAR">
+  <h1> Las mejores recetas al alcance de tus manos</h1>
+
+</div>
   <div class="ban">
       <img  src="./Imagenes/bandera.jpg"width="150" height="150" alt="bandera">
   </div>
@@ -34,6 +41,7 @@
 <img src="./Imagenes/Whatsapp-icono.jpg" alt="Whatsapp">
 </a>
 </div>
+
 </header>
 
 <br>
