--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Camila Luana Piriz">
     <title>RECETAS TIPICAS DE MISIONES</title>
 <link rel="stylesheet" href="./css/Estilos.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     </head>
   <body>
 <header>
@@ -98,6 +99,60 @@
 
 </div>
 
+<!-- bootstrap-->
+<div class="container-fluid">
+<div class="row">
+  <!--CARDS-->
+<div class="uno col-sm-12 col-md-6 col-lg-3">
+  <div class="card1" style="width: 18rem;">
+  <img src="./Imagenes/reviro.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Receta de reviro </h5>
+    <p class="card-text">El reviro es un plato típico que suele comerse en nuestra adorada provincia de Misiones, más comúnmente los días de frío y lluvia.</p>
+    <a href="https://cookpad.com/ar/recetas/8935226-reviro-misionero" class="btn btn-primary">Ver receta</a>
+  </div>
+</div>
+
+</div>
+
+<div class="dos col-sm-12 col-md-6 col-lg-3">
+  <div class="card2" style="width: 18rem;">
+    <img src="./Imagenes/chipa.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Receta de chipa de almidon</h5>
+      <p class="card-text">La chipa de almidon es un delicioso bocadillo ideal para acompañar el mate y otras infuciones.</p>
+      <a href="https://comidasparaguayas.com/receta-chipa-almidon/" class="btn btn-primary">Ver receta</a>
+    </div>
+  </div>
+
+</div>
+
+<div class="tres col-sm-12 col-md-6 col-lg-3">
+  <div class="card3" style="width: 18rem;">
+  <img src="./Imagenes/Vori.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Receta de Vori Vori</h5>
+    <p class="card-text">Es un caldo o sopa preparado a base de gallina, pollo, queso o res acompañado con bolitas de harina de maíz y queso con un sabor es increíble</p>
+    <a href="https://cookpad.com/ar/recetas/14606046-vori-vori-o-bori-bori-de-pollo-caldo-de-pollo-recetas-tradicionales-de-paraguay" class="btn btn-primary">Ver receta</a>
+  </div>
+</div>
+
+</div>
+
+<div class="cuatro col-sm-12 col-md-6 col-lg-3">
+  <div class="card4" style="width: 18rem;">
+    <img src="./Imagenes/mbeju.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Receta del Mbejú</h5>
+      <p class="card-text">El mbejú suele disfrutarse como desayuno, acompañado de mate, café, té o leche, y también se acostumbra a servirse con motivo de la festividad de San Juan</p>
+      <a href="https://www.recetasgratis.net/receta-de-mbeju-o-mbeyu-9410.html" class="btn btn-primary">Ver receta</a>
+    </div>
+  </div>
+</div>
+</div>
+
+</div>
+
 <!--colocar en el footer enlaces a las redes sociales con los iconos correspondientes-->
 <footer>
 <!--mapa-->
@@ -130,8 +185,10 @@
 
   </font></ul>
 </div>
+
+
 </footer>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
