--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-              <!--Imagen del icono-->
-
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -314,8 +312,9 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Los esperamos</h2>
-                    <h3 class="section-subheading text-muted">.</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3543.531034716344!2d-55.91409422513412!3d-27.359126312002864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9457be21976136a5%3A0x8837a1ed66ca59e9!2zQ2x1YiBOw6F1dGljbyBMZcOzbiBTZXLDsw!5e0!3m2!1ses-419!2sar!4v1689294559137!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+                    <iframe class="Mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3543.531034716344!2d-55.91409422513412!3d-27.359126312002864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9457be21976136a5%3A0x8837a1ed66ca59e9!2zQ2x1YiBOw6F1dGljbyBMZcOzbiBTZXLDsw!5e0!3m2!1ses-419!2sar!4v1689294559137!5m2!1ses-419!2sar" width="300" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <!-- Footer-->
         <footer class="footer py-4">
