--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content=" Camila Luana Piriz" />
         <title>CLUB NÁUTICO LEÓN SERÓ</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="./imagenes/logo.jpg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">Actividades</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Deportes NÁUTICOs</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">DEPORTES NÁUTICOS</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Nosotros </a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Redes</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">¿Donde nos encontramos?</a></li>
@@ -39,7 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">¡Bienvenido a nuestro club!</div>
+                <div class="masthead-subheading">¡Bienvenidos a nuestro club!</div>
                 <div class="masthead-heading text-uppercase">CLUB NÁUTICO lEÓN SERÓ</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">SUMATE A NUESTRAS ACTIVIDADES</a>
             </div>
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">¡Mira todo lo que te proponemos!</h2>
-                    <h3 class="section-subheading text-muted">Disfruta al maximo nuestro hermoso club y el rio Parana </h3>
+                    <h3 class="section-subheading text-muted">Disfrutá al maximo nuestro hermoso club y del río Paraná </h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -58,7 +58,7 @@
                           <!--  <i class= "fas fa-shopping-cart fa-stack-1x fa-inverse"></i>-->
                         </span>
                         <h4 class="my-3">Alquiler de Kayak</h4>
-                        <p class="text-muted">Todos los dias a partir de las 14:00 hs</p>
+                        <p class="text-muted">Todos los días a partir de las 14:00 horas</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -66,7 +66,7 @@
                             <!--<i class="fas fa-laptop fa-stack-1x fa-inverse"></i>-->
                         </span>
                         <h4 class="my-3">Paseos guiados</h4>
-                        <p class="text-muted">Te proponemos escapar de la rutina realizando un paseo guiado por las costas de nuestro hermoso Rio Parana</p>
+                        <p class="text-muted">Te proponemos escapar de la rutina realizando paseos guiados por las costas de nuestro majestuoso río Paraná</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -74,7 +74,7 @@
                             <!--<i class="fas fa-lock fa-stack-1x fa-inverse"></i>-->
                         </span>
                         <h4 class="my-3">¡Asociate!</h4>
-                        <p class="text-muted">Formá parte de nuestra hermosa familia nautica y disfruta de los beneficios de ser socio</p>
+                        <p class="text-muted">Formá parte de nuestra hermosa familia nautica y disfruta de todos los beneficios de ser socio</p>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                                 <img class="img-fluid" src="./imagenes/iniciacionsabado.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Inciacion al canotaje </div>
+                                <div class="portfolio-caption-heading">Inciación al canotaje </div>
                                 <div class="portfolio-caption-subheading text-muted">Día Sabado</div>
                             </div>
                         </div>
@@ -112,8 +112,8 @@
                                 <img class="img-fluid" src="./imagenes/inimartes.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Inciacion al canotaje</div>
-                                <div class="portfolio-caption-subheading text-muted">Día martes y jueves</div>
+                                <div class="portfolio-caption-heading">Inciación al canotaje</div>
+                                <div class="portfolio-caption-subheading text-muted">Días martes y jueves</div>
                             </div>
                         </div>
                     </div>
@@ -331,14 +331,14 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Clases de iniciacion al canotaje</h2>
+                                    <h2 class="text-uppercase">Clases de iniciación al canotaje</h2>
                                     <p class="item-intro text-muted">.</p>
                                     <img class="img-fluid d-block mx-auto" src="./imagenes/iniciacionsabado.jpg" alt="..." />
 
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Día:</strong>
-                                            SABADOS
+                                            Sabado
                                         </li>
                                         <li>
                                             <strong>Horario:</strong>
@@ -366,7 +366,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Clases de iniciacion al canotaje</h2>
+                                    <h2 class="text-uppercase">Clases de iniciación al canotaje</h2>
 
                                     <img class="img-fluid d-block mx-auto" src="./imagenes/inimartes.jpg" alt="..." />
 
@@ -375,7 +375,7 @@
                                           Martes y Jueves
                                         </li>
                                         <li>
-                                            <strong>horario:</strong>
+                                            <strong>Horario:</strong>
                                           15:30 a 17:30
                                         </li>
                                     </ul>
@@ -403,7 +403,7 @@
                                     <h2 class="text-uppercase">Canotaje femenino </h2>
 
                                     <img class="img-fluid d-block mx-auto" src="./imagenes/fem.jpg" alt="..." />
-                                    <
+                                
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Días:</strong>
@@ -477,7 +477,7 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Día y horario:</strong>
-                                            se coordina con el profesor.
+                                            Se coordina con el profesor.
                                         </li>
 
                                     </ul>
@@ -531,10 +531,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
